--- a/client/football.conf
+++ b/client/football.conf
@@ -1,7 +1,5 @@
-NAME=suyelu
+NAME=weiwenhu
 TEAM=1
-SERVERIP=123.57.102.65
+SERVERIP=112.124.29.41
 SERVERPORT=6666
-LOGMSG="Hi, Let's Play!"
-
-
+LOGMSG="Hello! Let's enjoy the game!"
